--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
